# PARCtorch

./: pyproject.toml
.github/workflows/: python-app.yml
PARCtorch/tests/: test_model.py
tests/: test_model.py
