[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PARCtorch"
version = "0.3.0"
authors = [
  { name="Jzd" },

]
description = "Physics-aware Recurrent Convolutional Neural Networks (PARCv2) in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
adjoint = ["torchdiffeq"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 79
exclude = ["./tests"]

[project.urls]
Homepage = "https://github.com/baeklab/PARCtorch"
Issues = "https://github.com/baeklab/PARCtorch/issues"
